# ai-feed-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: ai-feed-api-contract.md  analysis.md  public-access-model.md
src/ai_feed_mcp/: __init__.py  client.py  config.py  http_app.py  main.py  models.py  server.py
