[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-feed-mcp"
version = "0.1.0"
description = "MCP connector for AI Feed"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "mcp>=1.12.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "uvicorn>=0.30,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

